Alignment Fixes

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -30,16 +30,20 @@ pre {
   font-size: var(--size-4);
   font-weight: normal;
 }
-.c {
+/* .c {
   margin: var(--size-2);
-}
+} */
 
 .c-columns {
   display: flex;
-  flex-flow: row wrap;
-  flex-grow: 1;
-  flex-shrink: 0;
+  flex-flow: row nowrap;
 }
+/* .c-columns .col {
+  flex: 1;
+  flex-grow: 1;
+  flex-shrink: 1;
+  flex-basis: auto;
+} */
 
 .col.spaced {
   padding: var(--size-fluid-1) var(--size-fluid-4) var(--size-fluid-1) 0;
