--- a/src/assets/reset.css
+++ b/src/assets/reset.css
@@ -5,7 +5,7 @@
   margin: 0;
 }
 body {
-  line-height: 1.5;
+  line-height: 1.1;
   -webkit-font-smoothing: antialiased;
 }
 img, picture, video, canvas, svg {
